updated tomcat-plugin configuration.

--- a/human-productionplan/src/main/webapp/bootstrap/productionPlan.html
+++ b/human-productionplan/src/main/webapp/bootstrap/productionPlan.html
@@ -54,23 +54,79 @@
 
           <div class="dropdown">
             <select class="readable_value">
-              <option value="X82">X82</option>
-              <option value="Delta 3">Delta 3</option>
-              <option value="HFE">HFE</option>
-              <option value="Nova Insignia">Nova Insignia</option>
-              <option value="Corsa 1">Corsa 1</option>
-              <option value="Delta 1">Delta 1</option>
+              <option value="BMW - 155.031/032-00">BMW - 155.031/032-00</option>
+              <option value="Clio erna - 156.013/014-00">Clio erna - 156.013/014-00</option>
+              <option value="Clio temno siva - 156.013/014-01">Clio temno siva - 156.013/014-01</option>
+              <option value="Clio svetlo siva - 156.013/014-02">Clio svetlo siva - 156.013/014-02</option>
+              <option value="Astra 3300 (stara) 011 - 160.201/202-00">Astra 3300 (stara) 011 - 160.201/202-00</option>
+              <option value="Astra 3300 (stara) 012 - 160.201/202-00">Astra 3300 (stara) 012 - 160.201/202-00</option>
+              <option value="BMW - 161.493/494-00">BMW - 161.493/494-00</option>
+              <option value="Picasso PSA 010 - 162.979/980-00">Picasso PSA 010 - 162.979/980-00</option>
+              <option value="Picasso PSA 011 - 162.979/980-00">Picasso PSA 011 - 162.979/980-00</option>
+              <option value="Daimler CLK BR207 - 166.071-01/02">Daimler CLK BR207 - 166.071-01/02</option>
+              <option value="Daimler E-clase BR212 - 166.071-01/02">Daimler E-clase BR212 - 166.071-01/02</option>
+              <option value="Insignia (stara) 010 - 168.857-01/02">Insignia (stara) 010 - 168.857-01/02</option>
+              <option value="Insignia (stara) 011 - 168.857-01/02">Insignia (stara) 011 - 168.857-01/02</option>
+              <option value="Pathfinder - 170.090-01/02">Pathfinder - 170.090-01/02</option>
+              <option value="Delta (nova) - 010 171.572-01/02">Delta (nova) - 010 171.572-01/02</option>
+              <option value="Delta (nova) - 011 171.572-01/02">Delta (nova) - 011 171.572-01/02</option>
+              <option value="Delta (nova) - 012 171.572-01/02">Delta (nova) - 012 171.572-01/02</option>
+              <option value="Insignia GMX 350 172.306-01/02">Insignia GMX 350 172.306-01/02</option>
+              <option value="Golf AFS - 173.420-01/02">Golf AFS - 173.420-01/02</option>
+              <option value="Renault X10 - 180.585-01/02">Renault X10 - 180.585-01/02</option>
+              <option value="Insignia (nova) - 187.552-01/02">Insignia (nova) - 187.552-01/02</option>
+              <option value="Nissan X12 - 187.829-01/02">Nissan X12 - 187.829-01/02</option>
+              <option value="Renault X82 - 188.709-01/02">Renault X82 - 188.709-01/02</option>
+              <option value="Edison X07 - 190.890-01/02">Edison X07 - 190.890-01/02</option>
+              <option value="Porsche Cayenne 2K - 193-216-01/02">Porsche Cayenne 2K - 193-216-01/02</option>
+              <option value="Omega / Cadillac - 194.856-01/02">Omega / Cadillac - 194.856-01/02</option>
+              <option value="Corsa 010 - 195.429-01/02">Corsa 010 - 195.429-01/02</option>
+              <option value="Corsa 011 - 195.429-01/02">Corsa 011 - 195.429-01/02</option>
+              <option value="Renault HFE - 196.197-01/02">Renault HFE - 196.197-01/02</option>
+              <option value="Jaguar - 197.186-01/02">Jaguar - 197.186-01/02</option>
+              <option value="Renault Scenic 2K - 201.888-01/02">Renault Scenic 2K - 201.888-01/02</option>
+              <option value="Golf Halogen - 254.253/254-000">Golf Halogen - 254.253/254-000</option>
+              <option value="Lancia - 270.533/534-00">Lancia - 270.533/534-00</option>
+              <option value="Twingo - 271.535/536-00">Twingo - 271.535/536-00</option>
               <option value="Default_value" selected>Select type</option>
             </select>
           </div>
 
             <select class="readable_value2" onchange="selectedField(this)" value="false">
-              <option value="X82">X82</option>
-              <option value="Delta 3">Delta 3</option>
-              <option value="HFE">HFE</option>
-              <option value="Nova Insignia">Nova Insignia</option>
-              <option value="Corsa 1">Corsa 1</option>
-              <option value="Delta 1">Delta 1</option>
+              <option value="BMW - 155.031/032-00">BMW - 155.031/032-00</option>
+              <option value="Clio erna - 156.013/014-00">Clio erna - 156.013/014-00</option>
+              <option value="Clio temno siva - 156.013/014-01">Clio temno siva - 156.013/014-01</option>
+              <option value="Clio svetlo siva - 156.013/014-02">Clio svetlo siva - 156.013/014-02</option>
+              <option value="Astra 3300 (stara) 011 - 160.201/202-00">Astra 3300 (stara) 011 - 160.201/202-00</option>
+              <option value="Astra 3300 (stara) 012 - 160.201/202-00">Astra 3300 (stara) 012 - 160.201/202-00</option>
+              <option value="BMW - 161.493/494-00">BMW - 161.493/494-00</option>
+              <option value="Picasso PSA 010 - 162.979/980-00">Picasso PSA 010 - 162.979/980-00</option>
+              <option value="Picasso PSA 011 - 162.979/980-00">Picasso PSA 011 - 162.979/980-00</option>
+              <option value="Daimler CLK BR207 - 166.071-01/02">Daimler CLK BR207 - 166.071-01/02</option>
+              <option value="Daimler E-clase BR212 - 166.071-01/02">Daimler E-clase BR212 - 166.071-01/02</option>
+              <option value="Insignia (stara) 010 - 168.857-01/02">Insignia (stara) 010 - 168.857-01/02</option>
+              <option value="Insignia (stara) 011 - 168.857-01/02">Insignia (stara) 011 - 168.857-01/02</option>
+              <option value="Pathfinder - 170.090-01/02">Pathfinder - 170.090-01/02</option>
+              <option value="Delta (nova) - 010 171.572-01/02">Delta (nova) - 010 171.572-01/02</option>
+              <option value="Delta (nova) - 011 171.572-01/02">Delta (nova) - 011 171.572-01/02</option>
+              <option value="Delta (nova) - 012 171.572-01/02">Delta (nova) - 012 171.572-01/02</option>
+              <option value="Insignia GMX 350 172.306-01/02">Insignia GMX 350 172.306-01/02</option>
+              <option value="Golf AFS - 173.420-01/02">Golf AFS - 173.420-01/02</option>
+              <option value="Renault X10 - 180.585-01/02">Renault X10 - 180.585-01/02</option>
+              <option value="Insignia (nova) - 187.552-01/02">Insignia (nova) - 187.552-01/02</option>
+              <option value="Nissan X12 - 187.829-01/02">Nissan X12 - 187.829-01/02</option>
+              <option value="Renault X82 - 188.709-01/02">Renault X82 - 188.709-01/02</option>
+              <option value="Edison X07 - 190.890-01/02">Edison X07 - 190.890-01/02</option>
+              <option value="Porsche Cayenne 2K - 193-216-01/02">Porsche Cayenne 2K - 193-216-01/02</option>
+              <option value="Omega / Cadillac - 194.856-01/02">Omega / Cadillac - 194.856-01/02</option>
+              <option value="Corsa 010 - 195.429-01/02">Corsa 010 - 195.429-01/02</option>
+              <option value="Corsa 011 - 195.429-01/02">Corsa 011 - 195.429-01/02</option>
+              <option value="Renault HFE - 196.197-01/02">Renault HFE - 196.197-01/02</option>
+              <option value="Jaguar - 197.186-01/02">Jaguar - 197.186-01/02</option>
+              <option value="Renault Scenic 2K - 201.888-01/02">Renault Scenic 2K - 201.888-01/02</option>
+              <option value="Golf Halogen - 254.253/254-000">Golf Halogen - 254.253/254-000</option>
+              <option value="Lancia - 270.533/534-00">Lancia - 270.533/534-00</option>
+              <option value="Twingo - 271.535/536-00">Twingo - 271.535/536-00</option>
               <option value="" selected></option>
             </select>
 
@@ -222,7 +278,7 @@
     function sendRequest(values){
       var request = new XMLHttpRequest();
 
-      request.open('POST', 'http://localhost:8080/adapter/productionPlan', false);
+      request.open('POST', 'http://localhost:8081/adapter/productionPlan', false);
       request.setRequestHeader("Content-Type", "application/json");
       request.send(values);
     }
