--- a/human-productionplan/src/main/webapp/bootstrap/productionPlanForm.html
+++ b/human-productionplan/src/main/webapp/bootstrap/productionPlanForm.html
@@ -330,8 +330,8 @@
         }
 
       }
-        document.getElementById("Production_plan_form").reset();
-      location.reload();
+       // document.getElementById("Production_plan_form").reset();
+     // location.reload();
       })
     })
 
