Fixed materialCertificate form.

--- a/human-materialcertificate/src/main/webapp/bootstrap/materialCertificateForm.html
+++ b/human-materialcertificate/src/main/webapp/bootstrap/materialCertificateForm.html
@@ -104,7 +104,7 @@
 
       sendRequest(answers.toString());
 
-      alert('All values are submitted.')
+     // alert('All values are submitted.')
       $('#Human_form').reset();
 
     });
