checkbox added as replacement for radiobuttons.

--- a/human-inspectionreport/src/main/webapp/bootstrap/InspectionReportForm.html
+++ b/human-inspectionreport/src/main/webapp/bootstrap/InspectionReportForm.html
@@ -55,8 +55,8 @@
 
       <strong>Finding visual inspection:</strong>
       <br>
-      Resulting criticality rating swival: <input type="radio" name="readable_value" style="margin-left: 14px"><br>
-      Resulting criticality rating gearbox: <input type="radio" required class="readable_value">
+      Resulting criticality rating swival: <input type="checkbox" name="readable_value" style="margin-left: 14px"><br>
+      Resulting criticality rating gearbox: <input type="checkbox" required class="readable_value">
       <br>
       <br>
 
