--- a/human-inspectionreport/src/main/webapp/bootstrap/InspectionReportForm.html
+++ b/human-inspectionreport/src/main/webapp/bootstrap/InspectionReportForm.html
@@ -58,7 +58,7 @@
       <select id="dropList" name="Inspection_Type">
         <option name="defaultname" id="default" value="default">Choose type</option>
         <option id="Visual_inspection" value="Visual_inspection">Visual inspection</option>
-        <option id="Rating_swivel" value="Rating_swivel">Rating swivel</option>
+        <option id="Rating_swivel" value="Rating_swivel">Vibration monitoring</option>
         <option id="Oil_sampling" value="Oil_sampling">Oil sampling</option>
       </select>
       <br>
@@ -139,6 +139,14 @@
             Finding oil sampling:<input type="text" step="any"class="readable_value" style="margin-left: 10px; width:70px">
           </td>
         </tr>
+          <tr>
+            <td>Acceleration gearbox: <input type="text" required class="readable_value" style="margin-left: 0px; width:97px"></td>
+            <td>
+              Visual inspection:<input type="text" step="any"class="readable_value" style="margin-left: 10px; width:70px">
+              Finding vibration:<input type="text" step="any"class="readable_value" style="margin-left: 10px; width:70px">
+              Finding oil sampling:<input type="text" step="any"class="readable_value" style="margin-left: 10px; width:70px">
+            </td>
+          </tr>
         </tr>
         </table>
       </div>
