--- a/human-inspectionreport/src/main/webapp/bootstrap/InspectionReportForm.html
+++ b/human-inspectionreport/src/main/webapp/bootstrap/InspectionReportForm.html
@@ -77,14 +77,15 @@
       <tr>
         <td>
           Resulting criticality rating swivel:
-          <select id="Find_Visual_Inspection-1.1" style="margin-left: 15px">
-          <option value="Low">Low</option>
+          <select id="Find_Visual_Inspection-1-1" style="margin-left: 15px">
+            <option value="default">Choose value</option>
+            <option value="Low">Low</option>
           <option value="Medium">Medium</option>
           <option value="High">High</option>
           </select>
 
         <td>
-        Visual inspection:<input id="Find_Visual_Inspection-1.2" type="text" step="any"class="readable_value" readonly style="width:75px">
+        Visual inspection:<input id="Find_Visual_Inspection-1-2" type="text" step="any"class="readable_value" readonly style="width:75px">
       </td>
         </td>
         </tr>
@@ -92,14 +93,15 @@
             <td>
 
               Resulting criticality rating gearbox:
-              <select id="Find_Visual_Inspection-1.3">
-              <option value="Low">Low</option>
+              <select id="Find_Visual_Inspection-1-3">
+                <option value="default">Choose value</option>
+                <option value="Low">Low</option>
               <option value="Medium">Medium</option>
               <option value="High">High</option>
             </select>
 
             <td>
-            Visual inspection:<input id="Find_Visual_Inspection-1.4" type="text" step="any"class="readable_value" readonly style="width:75px">
+            Visual inspection:<input id="Find_Visual_Inspection-1-4" type="text" step="any"class="readable_value" readonly style="width:75px">
           </td>
             </td>
           </tr>
@@ -116,43 +118,38 @@
       <tr>
 
         <td>
-      <div id="Finding_Vibrations-1.1">Velocity swivel: <input type="number" step="any" required  style="margin-left: 43px; width:50px">mm/s
+      Velocity swivel: <input id="Finding_Vibrations-1-1" type="number" step="any" required  style="margin-left: 43px; width:50px">mm/s
            < 0,1 mm/s <td>
-          </div>
-          <div id="Finding_Vibrations-1.2">Finding vibration:<input type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:70px">
-      </div>
+
+          Finding vibration:<input id="Finding_Vibrations-1-2" type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:70px">
         </td>
       </tr>
 
           <tr>
         <td>
-          <div id="Finding_Vibrations-1.3">Acceleration swivel: <input type="number" step="any" required  style="margin-left: 14px; width:50px">mm/s<sup>2</sup>
-          < 0,05 mm/s<sup>2</sup> </div>
+          Acceleration swivel:<input id="Finding_Vibrations-1-3" type="number" step="any" required  style="margin-left: 18px; width:50px">mm/s<sup>2</sup>
+          < 0,05 mm/s<sup>2</sup>
         </td>
             <td>
-              <div id="Finding_Vibrations-1.4">Finding vibration:<input type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:70px">
-            </div>
+            Finding vibration:<input id="Finding_Vibrations-1-4" type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:70px">
             </td>
           </tr>
 
         <tr>
         <td>
-          <div id="Finding_Vibrations-1.5">Velocity gearbox: <input type="number" step="any" required  style="margin-left: 29px; width:50px">mm/s  < 0,2 mm/s
-        </div>
+          Velocity gearbox: <input id="Finding_Vibrations-1-5" type="number" step="any" required  style="margin-left: 29px; width:50px">mm/s  < 0,2 mm/s
         </td>
           <td>
-            <div id="Finding_Vibrations-1.6">Finding vibration:<input type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:70px">
-            </div>
+            Finding vibration:<input id="Finding_Vibrations-1-6" type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:70px">
           </td>
         </tr>
           <tr>
             <td>
-              <div id="Finding_Vibrations-1.7">Acceleration gearbox: <input type="number" step="any" required style="margin-left: 0px; width:50px">mm/s<sup>2</sup>
-              < 0,1 mm/s<sup>2</sup></div>
+            Acceleration gearbox: <input id="Finding_Vibrations-1-7" type="number" step="any" required style="margin-left: 0px; width:50px">mm/s<sup>2</sup>
+              < 0,1 mm/s<sup>2</sup>
             </td>
             <td>
-              <div id="Finding_Vibrations-1.8">Finding vibration:<input type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:70px">
-              </div>
+            Finding vibration:<input id="Finding_Vibrations-1-8" type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:70px">
             </td>
           </tr>
         </tr>
@@ -167,34 +164,34 @@
           </tr>
       <tr>
       <td>
-        Fe content swivel: <input type="number" step="any" required style="margin-left: 19px; width:50px;">
+        Fe content swivel: <input id=Finding_oil_sampling-1-1 type="number" step="any" required style="margin-left: 19px; width:50px;">
           ppm < 5 ppm
       </td>
         <td>
-          Finding oil sampling:<input type="text" step="any" class="readable_value" readonly style="margin-left: 10px; width:100px">
+          Finding oil sampling:<input id=Finding_oil_sampling-1-2 type="text" step="any" class="readable_value" readonly style="margin-left: 10px; width:100px">
           </td>
       </tr>
 
       <tr>
-      <td>Viscosity swivel: <input type="number" step="any" required style="margin-left: 32px; width:50px">
+      <td>Viscosity swivel: <input id=Finding_oil_sampling-1-3 type="number" step="any" required style="margin-left: 32px; width:50px">
         cSt 200 < Viscosity swivel < 240 cSt</td>
         <td>
-          Finding oil sampling:<input type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:100px">
+          Finding oil sampling:<input id=Finding_oil_sampling-1-4 type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:100px">
         </td>
       </tr>
           <tr>
-          <td>Fe content gearbox: <input type="number" step="any" required style="margin-left: 5px; width:50px">
+          <td>Fe content gearbox: <input id="Finding_oil_sampling-1-5" type="number" step="any" required style="margin-left: 5px; width:50px">
             ppm < 10 ppm</td>
             <td>
-              Finding oil sampling:<input type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:100px">
+              Finding oil sampling:<input id=Finding_oil_sampling-1-6 type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:100px">
             </td>
           </tr>
 
           <tr>
-        <td>Viscosity gearbox: <input type="number" step="any" required style="margin-left: 18px; width:50px">
+        <td>Viscosity gearbox: <input id=Finding_oil_sampling-1-7 type="number" step="any" required style="margin-left: 18px; width:50px">
             cSt 60 < Viscosity gearbox < 75 cSt</td>
             <td>
-              Finding oil sampling:<input type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:100px">
+              Finding oil sampling:<input id=Finding_oil_sampling-1-8 type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:100px">
             </td>
           </tr>
         </table>
@@ -218,6 +215,128 @@
   $('.readable_value').val("NA");
   // testChange
   $(document).ready(function() {
+
+    $('#Find_Visual_Inspection-1-1').on('input', function() {
+      var conceptName = $('#Find_Visual_Inspection-1-1 :selected').text();
+
+     if(conceptName === "Low"){
+       $('#Find_Visual_Inspection-1-2').css({'backgroundColor': "lightgreen"});
+       $('#Find_Visual_Inspection-1-2').val("True");
+     }else{
+       $('#Find_Visual_Inspection-1-2').css({'backgroundColor': "red"});
+       $('#Find_Visual_Inspection-1-2').val("False");
+     }
+    });
+
+    $('#Find_Visual_Inspection-1-3').on('input', function() {
+      var conceptName = $('#Find_Visual_Inspection-1-3 :selected').text();
+
+      if(conceptName === "Low"){
+        $('#Find_Visual_Inspection-1-4').css({'backgroundColor': "lightgreen"});
+        $('#Find_Visual_Inspection-1-4').val("True");
+      }else{
+        $('#Find_Visual_Inspection-1-4').css({'backgroundColor': "red"});
+        $('#Find_Visual_Inspection-1-4').val("False");
+      }
+    });
+
+///////////
+    $("#Finding_Vibrations-1-1").on('input', function() {
+      var conceptName = $("#Finding_Vibrations-1-1").val();
+
+      if(conceptName < 0.1){
+        $('#Finding_Vibrations-1-2').css({'backgroundColor': "lightgreen"});
+        $('#Finding_Vibrations-1-2').val("True");
+      }else{
+        $('#Finding_Vibrations-1-2').css({'backgroundColor': "red"});
+        $('#Finding_Vibrations-1-2').val("False");
+      }
+    });
+
+    $('#Finding_Vibrations-1-3').on('input', function() {
+      var conceptName = $('#Finding_Vibrations-1-3').val();
+        alert(conceptName < 0.05);
+      if(conceptName < 0.05){
+        $('#Finding_Vibrations-1-4').css({'backgroundColor': "lightgreen"});
+        $('#Finding_Vibrations-1-4').val("True");
+      }else{
+        $('#Finding_Vibrations-1-4').css({'backgroundColor': "red"});
+        $('#Finding_Vibrations-1-4').val("False");
+      }
+    });
+
+    $('#Finding_Vibrations-1-5').on('input', function() {
+      var conceptName = $('#Finding_Vibrations-1-5').val();
+
+      if(conceptName < 0.2){
+        $('#Finding_Vibrations-1-6').css({'backgroundColor': "lightgreen"});
+        $('#Finding_Vibrations-1-6').val("True");
+      }else{
+        $('#Finding_Vibrations-1-6').css({'backgroundColor': "red"});
+        $('#Finding_Vibrations-1-6').val("False");
+      }
+    });
+
+    $('#Finding_Vibrations-1-7').on('input', function() {
+      var conceptName = $('#Finding_Vibrations-1-7').val();
+
+      if(conceptName < 0.1){
+        $('#Finding_Vibrations-1-8').css({'backgroundColor': "lightgreen"});
+        $('#Finding_Vibrations-1-8').val("True");
+      }else{
+        $('#Finding_Vibrations-1-8').css({'backgroundColor': "red"});
+        $('#Finding_Vibrations-1-8').val("False");
+      }
+    });
+
+/////////////////////////////
+    $('#Finding_oil_sampling-1-1').on('input', function() {
+      var conceptName = $('#Finding_oil_sampling-1-1').val();
+
+      if(conceptName < 5){
+        $('#Finding_oil_sampling-1-2').css({'backgroundColor': "lightgreen"});
+        $('#Finding_oil_sampling-1-2').val("True");
+      }else{
+        $('#Finding_oil_sampling-1-2').css({'backgroundColor': "red"});
+        $('#Finding_oil_sampling-1-2').val("False");
+      }
+    });
+
+    $('#Finding_oil_sampling-1-3').on('input', function() {
+      var conceptName = $('#Finding_oil_sampling-1-3').val();
+
+      if(conceptName > 200 && conceptName < 240){
+        $('#Finding_oil_sampling-1-4').css({'backgroundColor': "lightgreen"});
+        $('#Finding_oil_sampling-1-4').val("True");
+      }else{
+        $('#Finding_oil_sampling-1-4').css({'backgroundColor': "red"});
+        $('#Finding_oil_sampling-1-4').val("False");
+      }
+    });
+
+    $('#Finding_oil_sampling-1-5').on('input', function() {
+      var conceptName = $('#Finding_oil_sampling-1-5').val();
+
+      if(conceptName < 10){
+        $('#Finding_oil_sampling-1-6').css({'backgroundColor': "lightgreen"});
+        $('#Finding_oil_sampling-1-6').val("True");
+      }else{
+        $('#Finding_oil_sampling-1-6').css({'backgroundColor': "red"});
+        $('#Finding_oil_sampling-1-6').val("False");
+      }
+    });
+
+    $('#Finding_oil_sampling-1-7').on('input', function() {
+      var conceptName = $('#Finding_oil_sampling-1-7').val();
+
+      if(conceptName < 75 && conceptName > 60){
+        $('#Finding_oil_sampling-1-8').css({'backgroundColor': "lightgreen"});
+        $('#Finding_oil_sampling-1-8').val("True");
+      }else{
+        $('#Finding_oil_sampling-1-8').css({'backgroundColor': "red"});
+        $('#Finding_oil_sampling-1-8').val("False");
+      }
+    });
 
     $('select[name="Inspection_Type"]').change(function(){
       $('#Find_Visual_Inspection').hide();
